--- a/Flick/Base.lproj/Main.storyboard
+++ b/Flick/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" misplaced="YES" id="chI-tR-gqc">
-                                <frame key="frameInset" minX="-1" minY="20" height="44" maxX="80.5"/>
+                                <frame key="frameInset" minX="-1.5" minY="20" height="44" maxX="81"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
@@ -27,6 +27,14 @@
                                     <segment title="" image="grid"/>
                                 </segments>
                             </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="No network connection" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="vAR-yy-qUT">
+                                <frame key="frameInset" minY="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" sectionHeaderHeight="1" sectionFooterHeight="28" id="pPo-5O-8p7">
                                 <frame key="frameInset" minY="64" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -75,6 +83,7 @@
                     <navigationItem key="navigationItem" id="wYR-kY-4NL"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="noNetworkConnectionLabel" destination="vAR-yy-qUT" id="Zwz-sh-LNj"/>
                         <outlet property="searchBar" destination="chI-tR-gqc" id="w7y-xn-wi5"/>
                         <outlet property="segmentedControl" destination="cfk-PG-Bfg" id="rO9-lc-zYW"/>
                         <outlet property="tableView" destination="pPo-5O-8p7" id="aqN-g4-9oA"/>
